# grocery-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: apple-notes.md  architecture.md  future-issues.md  imessage.md  product.md
src/grocery_agent/: __init__.py  apple_notes.py  cli.py  core.py  imessage.py  storage.py
tests/: test_apple_notes.py  test_apple_notes_cli.py  test_cli.py  test_core.py  test_entrypoint.py  test_imessage.py  test_imessage_apple_notes.py  test_storage.py
